this fixes this driver issue with postgres and hibernte when used with spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username = raj
 spring.datasource.password = Krishna@123
 
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
